@@ -19,6 +19,24 @@ Installation
 The file 'INSTALL' contains generic installation instructions.
 
 
+Debugging Support
+=================
+
+libexo currently supports three different levels of debugging support, which
+can be setup using the configure flag `--enable-debug' (check the output of
+`configure --help'):
+
+  `yes'		This is the default for SVN snapshot builds. It adds all kinds
+  		of checks to the code, and is therefore likely to run slower.
+		Use this for development of libexo and locating bugs in libexo.
+
+  `minimum'	This is the default for release builds. This is the recommended
+  		behaviour.
+
+  `no'		Disables all sanity checks. Don't use this unless you know
+  		exactly what you do.
+
+
 How to report bugs?
 ===================
 
