@@ -18,6 +18,11 @@ m4_define([libexo_version_build], [r@REVISION@])
 m4_define([libexo_version_tag], [svn])
 m4_define([libexo_version], [libexo_version_major().libexo_version_minor().libexo_version_micro()ifelse(libexo_version_nano(), [], [], [.libexo_version_nano()])ifelse(libexo_version_tag(), [], [], [libexo_version_tag()-libexo_version_build()])])
 
+dnl ********************************************
+dnl *** Full debug support for SVN snapshots ***
+dnl ********************************************
+m4_define([libexo_debug_default], [ifelse(libexo_version_tag(), [], [minimum], [full])])
+
 dnl ***************************
 dnl *** Initialize autoconf ***
 dnl ***************************
@@ -162,28 +167,33 @@ dnl ***********************************
 dnl *** Check for debugging support ***
 dnl ***********************************
 AC_ARG_ENABLE([debug],
-AC_HELP_STRING([--enable-debug], [Enable debugging support])
-AC_HELP_STRING([--disable-debug], [Disable debugging support]),
-  [], [ifelse(libexo_version_tag(), [], [enable_debug=no], [enable_debug=yes])])
+AC_HELP_STRING([--enable-debug=@<:@no/minimum/yes@:>@], [Turn on debugging @<:@default=libexo_debug_default@:>@]),
+  [], [enable_debug=libexo_debug_default])
 AC_MSG_CHECKING([whether to enable debugging support])
-if test x"$enable_debug" != x"no"; then
+if test x"$enable_debug" = x"yes" -o x"$enable_debug" = x"full"; then
   CFLAGS="$CFLAGS -O0 -g3 -DG_DISABLE_DEPRECATED -Werror -Wall"
-  AC_MSG_RESULT([yes])
 else
-  CPPFLAGS="$CPPFLAGS -DG_DISABLE_ASSERT -DG_DISABLE_CAST_CHECKS -DG_DISABLE_CHECKS"
-  AC_MSG_RESULT([no])
+  CFLAGS="$CFLAGS -DG_DISABLE_CAST_CHECKS"
 
-  AC_MSG_CHECKING([whether $LD accepts -O1])
-  case `$LD -O1 -v 2>&1 </dev/null` in
-  *GNU* | *'with BFD'*)
-    LDFLAGS="$LDFLAGS -Wl,-O1"
-    AC_MSG_RESULT([yes])
-    ;;
-  *)
-    AC_MSG_RESULT([no])
-    ;;
-  esac
+  if test x"$enable_debug" = x"no"; then
+    CFLAGS="$CFLAGS -DG_DISABLE_ASSERT -DG_DISABLE_CHECKS"
+  fi
 fi
+AC_MSG_RESULT([$enable_debug])
+
+dnl **************************************
+dnl *** Check for linker optimizations ***
+dnl **************************************
+AC_MSG_CHECKING([whether $LD accepts -O1])
+case `$LD -O1 -v 2>&1 </dev/null` in
+*GNU* | *'with BFD'*)
+  LDFLAGS="$LDFLAGS -Wl,-O1"
+  AC_MSG_RESULT([yes])
+  ;;
+*)
+  AC_MSG_RESULT([no])
+  ;;
+esac
 
 dnl ****************************************
 dnl *** Check for ELF visibility support ***
