@@ -4,6 +4,7 @@
   in Gtk+ 2.8, and improve the performance of the icon view.
 - Added a new utility exo-csource, which can generate C source code from
   arbitrary data.
+- Support three different levels of debugging support (yes/minimum/no).
 - New translations: Patricio Carr (es), Stephane Roy (fr), Daichi Kawahata (ja),
                     Pau Rul·lan Ferragut (ca)
 
