@@ -1,3 +1,8 @@
+2005-12-17	Benedikt Meurer <benny@xfce.org>
+
+	* NEWS, README, configure.in.in: Add support for three different levels
+	  of debugging support.
+
 2005-12-15	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c(exo_icon_view_expose_event): Don't handle expose
